--- a/MonteCarloSim/makefile
+++ b/MonteCarloSim/makefile
@@ -1,23 +1,23 @@
-CXXFLAGS= -Wall -g
-#LDFLAGS=
+CXXFLAGS= -Wall -g -I/home/micarn/boost_1_67_0 -std=c++11
+LDFLAGS= -L/home/micarn/boost_1_67_0/stage/lib
 #COMPOPT=
 
 
 CXX=g++
 
 CellTest: CellTest.o Cell.o
-	$(CXX) $(CXXFLAGS) -o CellTest CellTest.o Cell.o
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o CellTest CellTest.o Cell.o
 
 CellTest.o: CellTest.cpp Cell.hpp
-	$(CXX) $(CXXFLAGS) -c CellTest.cpp
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -c CellTest.cpp
 
 LatticeTest: LatticeTest.o Lattice.o Cell.o
-	$(CXX) $(CXXFLAGS) -o LatticeTest LatticeTest.o Lattice.o Cell.o
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o LatticeTest LatticeTest.o Lattice.o Cell.o
 
 LatticeTest.o: LatticeTest.cpp Lattice.hpp Cell.hpp
-	$(CXX) $(CXXFLAGS) -c LatticeTest.cpp
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -c LatticeTest.cpp
 
 Cell.o: Cell.hpp
 
 Lattice.o: Lattice.hpp Cell.hpp
-	$(CXX) $(CXXFLAGS) -c Lattice.cpp
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -c Lattice.cpp
