--- a/MonteCarloSim/makefile
+++ b/MonteCarloSim/makefile
@@ -17,7 +17,16 @@ LatticeTest: LatticeTest.o Lattice.o Cell.o
 LatticeTest.o: LatticeTest.cpp Lattice.hpp Cell.hpp
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) -c LatticeTest.cpp
 
+LatticeMLRPSTest: LatticeMLRPSTest.o LatticeMLRPS.o Cell.o
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o LatticeMLRPSTest LatticeMLRPSTest.o LatticeMLRPS.o Lattice.o Cell.o
+
+LatticeMLRSPTest.o: LatticeMLRPSTest.cpp LatticeMLRPS.hpp Cell.hpp
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -c LatticeMLRPSTest.cpp
+
 Cell.o: Cell.hpp
 
 Lattice.o: Lattice.hpp Cell.hpp
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) -c Lattice.cpp
+
+LatticeMLRPS.o: LatticeMLRPS.hpp Lattice.hpp Cell.hpp
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -c LatticeMLRPS.cpp
