--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 *.o
 *.so
 
+MonteCarloSim/LatticeTest
+MonteCarloSim/LatticeMLRPSTest
+MonteCarloSim/CellTest
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
