Added bash script & cpp excecutable to render normal pattern formation

--- a/MonteCarloSim/makefile
+++ b/MonteCarloSim/makefile
@@ -17,11 +17,17 @@ LatticeTest: LatticeTest.o Lattice.o Cell.o
 LatticeTest.o: LatticeTest.cpp Lattice.hpp Cell.hpp
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) -c LatticeTest.cpp
 
-LatticeMLRPSTest: LatticeMLRPSTest.o LatticeMLRPS.o Cell.o
+LatticeMLRPSTest: LatticeMLRPSTest.o LatticeMLRPS.o Lattice.o Cell.o
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o LatticeMLRPSTest LatticeMLRPSTest.o LatticeMLRPS.o Lattice.o Cell.o
 
-LatticeMLRSPTest.o: LatticeMLRPSTest.cpp LatticeMLRPS.hpp Cell.hpp
+LatticeMLRSPTest.o: LatticeMLRPSTest.cpp LatticeMLRPS.hpp Lattice.hpp Cell.hpp
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) -c LatticeMLRPSTest.cpp
+
+RenderIsolated: RenderIsolated.o LatticeMLRPS.o Lattice.o Cell.o
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o RenderIsolated RenderIsolated.o LatticeMLRPS.o Lattice.o Cell.o
+
+RenderIsolated.o: RenderIsolated.cpp LatticeMLRPS.hpp Lattice.hpp Cell.hpp
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -c RenderIsolated.cpp
 
 Cell.o: Cell.hpp
 
