implemented printing correlation function csvs as its own function

--- a/MonteCarloSim/makefile
+++ b/MonteCarloSim/makefile
@@ -18,7 +18,7 @@ LatticeTest.o: LatticeTest.cpp Lattice.hpp Cell.hpp
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) -c LatticeTest.cpp
 
 LatticeMLRPSTest: LatticeMLRPSTest.o LatticeMLRPS.o Lattice.o Cell.o
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o LatticeMLRPSTest LatticeMLRPSTest.o LatticeMLRPS.o Lattice.o Cell.o -lm -lfftw3
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o LatticeMLRPSTest LatticeMLRPSTest.o LatticeMLRPS.o Lattice.o Cell.o -lm #-lfftw3
 
 LatticeMLRSPTest.o: LatticeMLRPSTest.cpp LatticeMLRPS.hpp Lattice.hpp Cell.hpp
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) -c LatticeMLRPSTest.cpp
